添加 同步配置信息(job.xml或者database) 对应的工厂类ConfTypeFactory 简化 job.xml 和 lf_syn_job_conf 配置表的初始化

--- a/mykit-db-oracle/pom.xml
+++ b/mykit-db-oracle/pom.xml
@@ -16,15 +16,16 @@
     </properties>
 
     <dependencies>
-        <dependency>
+        <!--<dependency>
             <groupId>com.oracle</groupId>
             <artifactId>ojdbc6</artifactId>
             <version>${oracle.jdbc.version}</version>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>io.mykit.db.sync</groupId>
             <artifactId>mykit-db-common</artifactId>
             <version>1.0.0</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
