--- a/mykit-db-transfer/pom.xml
+++ b/mykit-db-transfer/pom.xml
@@ -19,6 +19,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>commons-dbutils</groupId>
+            <artifactId>commons-dbutils</artifactId>
+            <version>1.6</version>
+        </dependency>
+        <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>${jdbc.version}</version>
@@ -30,11 +35,11 @@
             <version>${mssql.version}</version>
         </dependency>
 
-        <dependency>
+        <!--<dependency>
             <groupId>com.oracle</groupId>
             <artifactId>ojdbc6</artifactId>
             <version>${oracle.jdbc.version}</version>
-        </dependency>
+        </dependency>-->
 
         <dependency>
             <groupId>io.mykit.db.sync</groupId>
